# autonomy-2026

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh  setup.md
ackermann_ws/install/: local_setup.sh  setup.sh
ackermann_ws/install/ackermann_nav/share/ackermann_nav/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ackermann_ws/install/ackermann_nav/share/ackermann_nav/cmake/: ackermann_navConfig-version.cmake  (+1 more)
ackermann_ws/log/: latest_build
ackermann_ws/src/ackermann_nav/: CMakeLists.txt  package.xml
ackermann_ws/src/ackermann_nav/config/: ekf.yaml
ackermann_ws/src/ackermann_nav/launch/: camera_config.py  real_robot.launch.py  zed_cameras.launch.py
ackermann_ws/src/ackermann_nav/urdf/: ackermann_stereo.urdf
ackermann_ws/src/rc_car_navigation/: package.xml  setup.cfg
ackermann_ws/src/rc_car_navigation/launch/: bringup.launch.py
ackermann_ws/src/zed_fusion/: package.xml  setup.cfg  setup.py
ackermann_ws/src/zed_fusion/launch/: fusion.launch.py  zed_cameras.launch.py
ackermann_ws/src/zed_fusion/zed_fusion/: camera_config.py  camera_information.py  cloud_merger.py  transform_utils.py
docs/: nav2-params.md
docs/gazebo/: gazebo-first-steps.md
rc_car_nav2/: nav2_params.yaml
rc_car_navigation/: setup.py
rc_car_navigation/config/: ekf_params.yaml  nav2_params.yaml  nav2_params_mvp.yaml
rc_car_navigation/launch/: bringup.launch.py
rc_car_navigation/rc_car_navigation/: cmd_vel_to_can.py
rc_car_navigation/urdf/: rc_car.urdf
(+12 files in other folders)
